--- a/openmetadata-ui/src/main/resources/ui/src/components/MyData/MyDataWidget/my-data-widget.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/MyData/MyDataWidget/my-data-widget.less
@@ -50,6 +50,10 @@
     background-color: @grey-29;
     max-width: 100%;
     overflow: hidden;
+    .item-link {
+      flex-grow: 1 !important;
+      flex: 1 1 0%;
+    }
     .item-link:hover {
       text-decoration: none;
     }
